--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,6 @@
             flex-direction: column;
         }
 
-
         .menu-container {
             text-align: center;
             display: flex;
@@ -26,7 +25,6 @@
             justify-content: center;
             gap: 30px;
         }
-
 
         .menu-item {
             background-color: #008CBA;
@@ -45,24 +43,36 @@
             height: 120px;
         }
 
-
         .menu-item:hover {
             background-color: #007ba7;
             transform: scale(1.05);
         }
 
-
         .menu-item:active {
             transform: scale(1);
         }
 
+        .logout-btn {
+            margin-top: 40px;
+            padding: 15px 40px;
+            font-size: 20px;
+            background-color: #d9534f;
+            color: white;
+            border: none;
+            border-radius: 10px;
+            cursor: pointer;
+            transition: background 0.3s ease;
+        }
+
+        .logout-btn:hover {
+            background-color: #c9302c;
+        }
 
         h1 {
             font-size: 36px;
             color: #333;
             margin-bottom: 40px;
         }
-
 
         @media (max-width: 768px) {
             .menu-item {
@@ -71,12 +81,10 @@
                 font-size: 20px;
             }
 
-
             h1 {
                 font-size: 30px;
             }
         }
-
 
         @media (max-width: 480px) {
             .menu-item {
@@ -84,7 +92,6 @@
                 padding: 15px 30px;
                 font-size: 18px;
             }
-
 
             h1 {
                 font-size: 26px;
@@ -94,9 +101,7 @@
 </head>
 <body>
 
-
-    <h1>Bem-vindo ao Sistema de Estoque</h1>
-
+    <h1 id="greeting">Bem-vindo ao Sistema de Estoque</h1>
 
     <div class="menu-container">
         <!-- Botões de navegação -->
@@ -105,6 +110,28 @@
         <a href="historico.html" class="menu-item">Histórico</a>
     </div>
 
+    <!-- Botão de sair -->
+    <button class="logout-btn" onclick="logout()">Sair</button>
+
+    <script>
+        // Função para exibir o nome do usuário
+        window.onload = function() {
+            const username = localStorage.getItem('username');
+            if (username) {
+                // Se o nome de usuário estiver no localStorage, exibe a saudação
+                document.getElementById('greeting').textContent = `Olá, ${username}! Bem-vindo ao sistema.`;
+            } else {
+                // Se não encontrar o nome de usuário, redireciona para a página de login
+                window.location.href = 'index.html';
+            }
+        }
+
+        // Função de logout
+        function logout() {
+            localStorage.removeItem('username');  // Remove o nome de usuário do localStorage
+            window.location.href = 'index.html';  // Redireciona para a página de login
+        }
+    </script>
 
 </body>
 </html>
